--- a/PublicLibraryService.API/PublicLibraryService.API.csproj
+++ b/PublicLibraryService.API/PublicLibraryService.API.csproj
@@ -32,7 +32,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="logs\" />
+	  <Folder Include="Database\" />
+	  <Folder Include="logs\" />
   </ItemGroup>
 
 </Project>
